...
              }
            />
          </>
        ) : (
          <>
            <AuthForm
              actionLabel="Create Account"
              onSubmit={async (values) => {
                const error = await signUp(
                  values.email,
                  values.password,
                  redirectTo,
                );
...
